# botan

./: .clang-format  .editorconfig  .gitignore  .gitmodules  README.md  TODO.md  botan-2.18.1.wrap  botan.wrap  corelib.wrap  meson.build  meson_options.txt  shell.cmd  xcore.wrap
docs/: meson.build
docs/api-reference/: doxygen.config.in  doxygen.config.in.bak  meson.build
docs/api-reference/resources/: Namespaces.h  bibliography.bib  namespaces.h
docs/api-reference/resources/dox/: modules.dox
docs/api-reference/resources/md/: main-page.md
examples/: meson.build
examples/Example01/: meson.build
examples/Example01/Host/: Host.cpp  meson.build
examples/Example02/: meson.build
examples/Example02/Host/: Host.cpp  meson.build
examples/Example03/: meson.build
examples/Example03/Host/: Host.cpp
examples/Example03/Plugin/: Plugin.cpp  Plugin.h
examples/Example04/Host/: Host.cpp  MyPlugin.h
examples/Example04/Plugin/: Plugin.cpp  Plugin.h
examples/Example05/Host/: Host.cpp
examples/example01/: meson.build  run.cmd
examples/example01/app/: app.cpp  meson.build
examples/example01/host/: host.cpp  meson.build
examples/example02/: meson.build  run.cmd
examples/example02/host/: host.cpp  meson.build
examples/example03/: meson.build
examples/example03/host/: host.cpp  meson.build
examples/example03/plugin/: meson.build  plugin.cpp  plugin.h
examples/example04/: meson.build
examples/example04/host/: host.cpp  meson.build  my_plugin.h
examples/example04/plugin/: meson.build  plugin.cpp  plugin.h
examples/example05/: meson.build
examples/example05/host/: host.cpp  meson.build
include/XCore/: Common.h  DLL.h  FS.h  Log.h  Math.h  Plugin.h  STL.h  XCore.h
include/XCore/Common/: AssetInfo.h  Core.h  Disposable.h  Macros.h  SemVer.h  TypeAlias.h  TypeDefs.h  Types.h  support.h
include/XCore/Common/Core/: FileSystem.h  Macros.h  Platform.h  STL.h  Utils.h  v4_uuids.txt
include/XCore/Common/Core/Platform/: Linux.h  OSX.h  Windows.h
include/XCore/Common/Types/: AssetInfo.h  Disposable.h  Guid.h  SemVer.h
include/XCore/Common/support/: filesystem.h  macros.h  platform.h  stl.h  utils.h
include/XCore/Common/support/platform/: linux.h  osx.h  windows.h
include/XCore/Log/: ConsoleSink.h  FileSink.h  Level.h  Loggable.h  Logger.h  Macros.h  Registry.h  Sinkable.h
include/XCore/Plugin/: Plugable.h
include/XCore/STL/: EA.h
include/corelib/: asset_info.h  common.h  corelib.h  disposable.h  dll.h  plugable.h  semver.h
include/xcore/: asset_info.h  common.h  disposable.h  dll.h  fs.h  log.h  math.h  plugable.h  plugin.h  semver.h  stl.h  stl_ea.h  stl_std.h  xcore.h
include/xcore/Common/: AssetInfo.h
include/xcore/Log/: ConsoleSink.h
include/xcore/common/: asset_info.h  common.h  disposable.h  macros.h  platform.h  semver.h
include/xcore/common/platform/: lnx.h  osx.h  win.h
include/xcore/internal/: stl_ea.h
include/xcore/log/: console_sink.h  file_sink.h  level.h  loggable.h  logger.h  sink.h
include/xcore/log/general/: console_sink.h  file_sink.h  level.h  loggable.h  logger.h  sink.h  sinkable.h
include/xcore/plugin/: plugable.h
include/xcore/stl/: ea.h  std.h
sources/: DLL.cpp  dll.cpp  meson.build  plugable.cpp  stl.cpp
sources-original/: meson.build
sources-original/botan/: meson.build
sources/Common/: Core.cpp
sources/Common/Core/: STL.cpp  Utils.cpp
sources/Common/Core/Platform/: Linux.cpp  OSX.cpp  Windows.cpp
sources/Common/Types/: Guid.cpp
sources/Common/support/: stl.cpp  utils.cpp
sources/Common/support/platform/: linux.cpp  osx.cpp  windows.cpp
sources/Log/: ConsoleSink.cpp  FileSink.cpp  Internal.cpp  Internal.h  Logger.cpp  Registry.cpp
sources/Plugin/: Plugable.cpp
sources/common/platform/: lnx.cpp  osx.cpp  win.cpp
sources/internal/: stl_ea.cpp
sources/log/: console_sink.cpp  file_sink.cpp  internal.cpp  internal.h  logger.cpp
sources/log/general/: console_sink.cpp  file_sink.cpp  internal.cpp  internal.h  logger.cpp
sources/plugin/: plugable.cpp
sources/stl/: ea.cpp
tests/: README  Test01.cpp  meson.build  run.cmd
tests/Common/: meson.build
tests/Common/Types/: GuidTest.cpp  meson.build
tests/DLL/: DLLTest.cpp  meson.build
tests/DLL/ExampleDLL/: ExampleDLL.cpp  meson.build
tests/Plugin/: PluginTest.cpp  meson.build
tests/Plugin/ExamplePlugin/: ExamplePlugin.cpp  ExamplePlugin.h  meson.build
tests/dll/: dll_test.cpp
tests/dll/example_library/: example_library.cpp  meson.build
tools/general/: README
tools/scripts/: README  project-builder  project-cleaner  project-generator  project-rebuild  project-rebuilder  project-regen  project_builder  project_cleaner  project_configurator  project_formatter  project_generator  project_rebuilder  wrapper-doxygen  wrapper_doxygen
tools/toolset/: README
