
option('build_tests',
        description : 'Build the tests.',
        type        : 'boolean',
        value       : false)

option('build_examples',
        description : 'Build the example programs.',
        type        : 'boolean',
        value       : false)

option('build_docs',
        description : 'Build the documentation.',
        type        : 'boolean',
        value       : false,
        yield       : true)
