
option('build_examples',
        description : 'Build the example programs.',
        type        : 'boolean',
        value       : false,
        yield       : true)

option('build_docs',
        description : 'Build the documentation.',
        type        : 'boolean',
        value       : false,
        yield       : true)

option('log_error',
        description : 'Log error, if any.',
        type        : 'boolean',
        value       : true)

option('log_output',
        description : 'Log output.',
        type        : 'boolean',
        value       : false)
