
shared_library('example_library',
                sources      : ['example_library.cpp'],
                cpp_args     : ['-DDLL_EXAMPLE_LIBRARY_API=XCORE_SYMBOL_EXPORT'],
                dependencies : [xcore_dep],
                install_dir  : install_dir_tests_data,
                install      : true)
